persistencia dos dados clientside e sqlite

--- a/backend/templates/admin.html
+++ b/backend/templates/admin.html
@@ -131,7 +131,7 @@
       <h2>⚙️ Configurações Gerais</h2>
       <div class="form-box">
         <div>
-          <label>Nome do Estúdio</label>
+          <label>Nome do Estabelecimento</label>
           <input type="text" id="cfg_name">
         </div>
         <div>
@@ -150,7 +150,7 @@
           <h3 id="editor-title">Criar Novo Passo</h3>
         </div>
         <div>
-          <label>ID Único (ex: info_precos)</label>
+          <label>Identificador - único(ex: info_precos)</label>
           <input type="text" id="step_id" placeholder="Sem espaços">
         </div>
         <div class="full-width">
